--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -12,6 +12,13 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<distributionManagement>
+		<repository>
+			<id>nexus</id>
+			<url>http://office-sp.dclick.com.br/nexus/content/repositories/releases</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
