--- a/web-security/pom.xml
+++ b/web-security/pom.xml
@@ -13,6 +13,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>nexus</id>
+			<url>http://office-sp.dclick.com.br/nexus/content/repositories/releases</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>BlackCrow</groupId>
