--- a/data-jpa/pom.xml
+++ b/data-jpa/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>omakase</groupId>
 	<artifactId>data-jpa</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>data-jpa</name>
@@ -11,6 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<springDataJpaVersion>1.7.1.RELEASE</springDataJpaVersion>
 	</properties>
 	<distributionManagement>
 		<repository>
@@ -23,7 +24,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.6.2.RELEASE</version>
+			<version>${springDataJpaVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
