--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -2,7 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>omakase</groupId>
 	<artifactId>web-api</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
+	
+	<properties>
+		<springVersion>4.1.1.RELEASE</springVersion>
+	</properties>
 
 	<distributionManagement>
 		<repository>
@@ -26,7 +30,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>4.0.6.RELEASE</version>
+			<version>${springVersion}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -37,7 +41,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.0.6.RELEASE</version>
+			<version>${springVersion}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-expression</artifactId>
@@ -77,7 +81,7 @@
 		<dependency>
 			<groupId>omakase</groupId>
 			<artifactId>web-security</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1</version>
 		</dependency>
 
 	</dependencies>
